kubernetes/monitoring/gatus/base/gatus.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: gatus
  name: gatus
  labels:
    kalexlab.xyz/app: gatus
    kalexlab.xyz/component: gatus
spec:
  type: ClusterIP
  ports:
    - name: gatus
      port: 8080
      protocol: TCP
  selector:
    kalexlab.xyz/app: gatus
    kalexlab.xyz/component: gatus
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: gatus
  name: gatus
  labels:
    kalexlab.xyz/app: gatus
    kalexlab.xyz/component: gatus
spec:
  replicas: 1
  selector:
    matchLabels:
      kalexlab.xyz/app: gatus
      kalexlab.xyz/component: gatus
  minReadySeconds: 5
  template:
    metadata:
      labels:
        kalexlab.xyz/app: gatus
        kalexlab.xyz/component: gatus
    spec:
      restartPolicy: Always
      containers:
        - name: app
          image: "ghcr.io/twin/gatus:v5.36.0"
          imagePullPolicy: Always

          ports:
            - containerPort: 8080
              protocol: TCP

          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL

          resources:
            requests:
              memory: 50Mi
              cpu: 10m
            limits:
              memory: 200Mi
              cpu: 100m

          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            failureThreshold: 3
            periodSeconds: 30

          volumeMounts:
            - mountPath: /config
              name: gatus-conf

      enableServiceLinks: false
      automountServiceAccountToken: false

      securityContext:
        runAsNonRoot: true
        runAsUser: 10000
        runAsGroup: 10000
        fsGroup: 10000
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault

      volumes:
        - name: gatus-conf
          configMap:
            name: gatus-conf
