kubernetes/monitoring/gatus/base/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gatus-ingress
  namespace: gatus
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.10.20
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`status.kalexlab.xyz`)
      services:
        - name: gatus
          port: 8080
  tls:
    secretName: gatus-ingress-certificate-secret
