kubernetes/monitoring/gatus/base/network-policies.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: gatus
  name: default-deny-all
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: gatus
  name: allow-egress-cluster-dns
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: coredns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: gatus
  name: gatus
spec:
  podSelector:
    matchLabels:
      kalexlab.xyz/app: gatus
      kalexlab.xyz/component: gatus
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: gatus
              kalexlab.xyz/component: cluster
      ports:
        - protocol: TCP
          port: 5432

    # Allow to reach Authelia for OIDC
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 8443

    # Allow traffic to internal services
    - to:
        - namespaceSelector: {}

    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-clusterwide-healthchecks
spec:
  endpointSelector:
    matchLabels:
      kalexlab.xyz/monitoring: "true"
  ingress:
    # Allow traffic to all pods from gatus
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: gatus
            kalexlab.xyz/app: gatus
            kalexlab.xyz/component: gatus
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: gatus
  name: cluster
spec:
  podSelector:
    matchLabels:
      kalexlab.xyz/app: gatus
      kalexlab.xyz/component: cluster
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: gatus
              kalexlab.xyz/component: gatus
      ports:
        - protocol: TCP
          port: 5432
